[package]
name = "luajit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.9.4", features = ["vendored", "luajit"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "local_table"
harness = false